<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Covid-19</string>

    <!--    GLOBAL STRING ASSET-->
    <string name="null_text" translatable="false">Tidak Diketahui</string>
    <string name="loading_text" tools:ignore="TypographyEllipsis">Memuat...</string>
    <string name="web_view_loading_page" tools:ignore="TypographyEllipsis">Laman sedang dimuat...</string>

    <!--    ALARM STRING ASSET-->
    <string name="alarm_on_toast">Notifikasi akan muncul jika aplikasi tidak dibuka selama 1 Hari Penuh!</string>
    <string name="alarm_off_toast">Notifikasi telah dimatikan!</string>
    <string name="notification_title">COVID-19 App</string>
    <string name="notification_text">Pantau Terus Covid-19 Dengan Berita Terbaru</string>
    <string name="alarm_off">off</string>
    <string name="alarm_on"> on</string>

    <!--    FRAGMENT HOME STRING ASSET-->
    <string name="home_header">Apakah kamu merasa sesuatu yang aneh?</string>
    <string name="home_desc">Jika kamu merasakan sesuatu berkaitan dengan gejala covid-19, segera hubungi layanan darurat agar segera ditangani.</string>
    <string name="home_call">Telepon</string>
    <string name="home_website" translatable="false">Website</string>
    <string name="home_news_header">Berita</string>
    <string name="home_preventive_header">Pencegahan</string>
    <string name="home_preventive1">Jaga Jarak Sosial</string>
    <string name="home_preventive2">Sering Cuci Tangan</string>
    <string name="home_preventive3">Pakailah Masker</string>
    <string name="home_title">Stay Safe</string>

    <!--    FRAGMENT INFO STRING ASSET-->
    <string name="info_title">Informasi</string>
    <string name="info_desc" translatable="false">Versi 1.4 ©️ Covid-19 App 2020</string>
    <string name="info_desc2">Dikembangkan oleh K10</string>
    <string name="info_acknowledgement">Ucapan Terima Kasih</string>
    <string name="info_ack1">Data informasi oleh data.covid19.go.id</string>
    <string name="info_ack4">Data berita oleh newsapi.org</string>
    <string name="info_term">Pengunaan</string>
    <string name="about">
        Aplikasi ini dimaksudkan untuk memenuhi tugas besar "Capstone Project" mata kuliah Pemrograman Bergerak (Mobile Programming)
        Segala data yang berhubungan dengan data Covid-19 di aplikasi ini diambil dari situs resmi Covid-19 pemerintah
        Indonesia (covid19.go.id).
    </string>

    <string name="infokami">
     Tentang Kami :
    </string>

    <string name="kelompok">
    https://github.com/Kelompok10PB/CapstoneProjectK10
    </string>

    <!--    FRAGMENT MAPS STRING ASSET-->
    <string name="maps_title">Kasus Per Provinsi</string>

    <!--    FRAGMENT STATS STRING ASSET -->
    <string name="stat_subtitle">Total Kasus Hingga Hari Ini di Indonesia</string>
    <string name="stat_positive">Positif</string>
    <string name="stat_death">Meninggal</string>
    <string name="stat_cured">Sembuh</string>
    <string name="stat_monitoring">ODP</string>

    <!--    INFO WINDOW PROV STRING ASSET-->
    <string name="info_window_prov_cases">"Kasus: "</string>
    <string name="info_window_prov_death">"Meninggal: "</string>
    <string name="info_window_prov_cured">"Sembuh: "</string>
    <string name="info_window_prov_treated">"Dirawat: "</string>
    <string name="info_window_prov_subtitle">Dari seluruh kasus di Indonesia</string>
    <string name="info_window_prov_subtitle2">Data Kasus Berdasarkan:</string>
    <string name="info_window_prov_sex">Jenis Kelamin:</string>
    <string name="info_window_prov_age">Umur:</string>

    <!--    PROVINCE LAYOUT STRING ASSET-->
    <string name="prov_layout_search" tools:ignore="TypographyEllipsis">Cari provinsi ...</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_maps">Peta</string>
    <string name="menu_info">Informasi</string>

    <string name="sql_edittext">   Tulis Disini...</string>
    <string name="sql_desc">Tulis Apapun yang Ada ingin Simpan Disini</string>
    <string name="sql_button_add">Tambah</string>
    <string name="sql_button_list">List</string>
    <string name="sql_button_delete">Hapus</string>
    <string name="sql_button_save">Simpan</string>
</resources>