<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_header">

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="20dp"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_header"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/home_title"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:id="@+id/info_language_button"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:layout_gravity="center"
                                android:background="@drawable/rounded_country"

                                android:backgroundTint="@android:color/holo_red_light"
                                android:clickable="true"
                                android:focusable="true"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp">

                                <ToggleButton
                                    android:id="@+id/alarmToggle"
                                    android:layout_width="61dp"
                                    android:layout_height="38dp"
                                    android:backgroundTint="@android:color/holo_red_light"
                                    android:background="@drawable/rounded_alarm"
                                    android:button="@drawable/ic_stat_notif"
                                    android:textColor="#ffff"
                                    android:textOff="@string/alarm_off"
                                    android:textOn="@string/alarm_on" />


                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="15dp">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_span="2"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/home_header"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_span="2"
                            android:layout_weight="1"
                            android:text="@string/home_desc"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp">

                        <LinearLayout
                            android:id="@+id/home_call_button"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_callnow_button"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="6dp"
                                android:src="@drawable/icon_phone"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/home_call"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_website_button"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_website_button"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="6dp"
                                android:src="@drawable/icon_web"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/home_website"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </TableRow>
                    c
                </TableLayout>

            </RelativeLayout>


            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <include
                    layout="@layout/fragment_stats" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_span="3"
                        android:text="@string/home_preventive_header"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp">

                    <LinearLayout
                        android:id="@+id/home_preventive_1"
                        android:layout_width="wrap_content"
                        android:layout_height="130dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_preventive"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        tools:targetApi="lollipop">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="90dp"
                            android:gravity="center"
                            android:paddingTop="4dp"
                            android:src="@drawable/social_distancing"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/home_preventive1"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_preventive_2"
                        android:layout_width="wrap_content"
                        android:layout_height="130dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_preventive"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        tools:targetApi="lollipop">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="90dp"
                            android:gravity="center"
                            android:paddingTop="4dp"
                            android:src="@drawable/wash_hand"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/home_preventive2"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_preventive_3"
                        android:layout_width="wrap_content"
                        android:layout_height="130dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_preventive"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        tools:targetApi="lollipop">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="90dp"
                            android:gravity="center"
                            android:paddingTop="4dp"
                            android:src="@drawable/wear_mask"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/home_preventive3"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_span="3"
                        android:text="@string/home_news_header"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </TableRow>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    shimmer:shimmer_duration="1000">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <include layout="@layout/placeholder_news"/>
                        <include layout="@layout/placeholder_news"/>

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/news_recycler_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />


            </TableLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>