<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/stat_subtitle"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stat_updated_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/loading_text"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/stat_box_shimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <include layout="@layout/placeholder_stats"/>

            </com.facebook.shimmer.ShimmerFrameLayout>

        </RelativeLayout>

        <TableLayout
            android:id="@+id/stat_box_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_stats"
                    android:backgroundTint="@color/themeOrange"
                    android:orientation="vertical"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/stat_positive"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/stat_added_pos"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="10dp"
                            android:gravity="end"
                            android:text="@string/null_text"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/stat_kasus_aktif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/null_text"
                        android:textColor="#FFFFFF"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_stats"
                    android:backgroundTint="@color/themeRed"
                    android:orientation="vertical"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/stat_death"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/stat_added_men"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="10dp"
                            android:gravity="right"
                            android:text="@string/null_text"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/stat_kasus_meninggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/null_text"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_stats"
                    android:backgroundTint="@color/themeGreen"
                    android:orientation="vertical"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/stat_cured"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/stat_added_sem"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="10dp"
                            android:gravity="end"
                            android:text="@string/null_text"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/stat_kasus_sumbuh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/null_text"
                        android:textColor="#FFFFFF"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_stats"
                    android:backgroundTint="@color/themeBlue"
                    android:orientation="vertical"
                    tools:targetApi="lollipop">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/stat_monitoring"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/stat_kasus_odp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/null_text"
                        android:textColor="#FFFFFF"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </TableRow>

        </TableLayout>
    </LinearLayout>
    </LinearLayout>